--- a/Assignment8/package.json
+++ b/Assignment8/package.json
@@ -9,6 +9,7 @@
   "author": "Jilson",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -20,6 +21,5 @@
   "repository": {
     "type": "git",
     "url": "Assignment8"
-  },
-  "devDependencies": {}
+  }
 }
